Updated gedcom4j dependency to 3.2.2.